<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

            <TextView
                android:id="@+id/alert_title"
                android:paddingTop="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="15dp"
                android:text="@string/deny"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/blackColor2"
                android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_deny_message"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/blackColor1"
            android:layout_marginStart="15dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="15dp"/>

            <CheckBox
                android:id="@+id/button_add_to_black_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawablePadding="12dp"
                android:text="@string/add_to_blacklist"/>
            <CheckBox
                android:id="@+id/button_delete_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="12dp"
                android:text="@string/delete_request"
                android:layout_margin="5dp" />
            <CheckBox
                android:id="@+id/button_delete_all_requests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="12dp"
                android:text="@string/delete_all_requests_from_user"
                android:layout_margin="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/deny_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:gravity="center"
                android:textColor="@color/blackColor1"
                android:fontFamily="@font/roboto_bold"
                android:backgroundTint="@color/greenPrimary"
                />

            <TextView
                android:id="@+id/deny_deny"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/deny"
                android:gravity="center"
                android:fontFamily="@font/roboto_bold"
                android:backgroundTint="@color/greenPrimary"
                android:padding="10dp"
                android:textColor="@color/greenPrimary"/>

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>